Implemented normalization on regression model

--- a/Project 1 David.ipynb
+++ b/Project 1 David.ipynb
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2243,22 +2243,33 @@
      "output_type": "stream",
      "text": [
       "Income Per Capita Linear Regression Model\n",
-      "Train r2 score: 0.895948273874\n",
-      "Test r2 score: 0.862231533494\n",
+      "Train r2 score: 0.885831879395\n",
+      "Test r2 score: 0.893782547712\n",
+      "Income Per Capita Linear Regression Model (l1 Normalized)\n",
+      "Train r2 score: 0.655418984748\n",
+      "Test r2 score: 0.674592888596\n",
       "\n",
       "Unemployment Linear Regression Model\n",
-      "Train r2 score: 0.433468107302\n",
-      "Test r2 score: 0.383857493529\n",
+      "Train r2 score: 0.447171123056\n",
+      "Test r2 score: 0.324041299826\n",
+      "Unemployment Linear Regression Model (l1 Normalized)\n",
+      "Train r2 score: 0.575120075472\n",
+      "Test r2 score: 0.453129178586\n",
       "\n",
-      "Poverty Regression Model\n",
-      "Train r2 score: 0.929796333252\n",
-      "Test r2 score: 0.916845668394\n"
+      "Poverty Linear Regression Model\n",
+      "Train r2 score: 0.926523876788\n",
+      "Test r2 score: 0.928310570411\n",
+      "Poverty Linear Regression Model (l1 Normalized)\n",
+      "Train r2 score: 0.84779594889\n",
+      "Test r2 score: 0.844400312175\n"
      ]
     }
    ],
    "source": [
-    "def linear_reg(X, y, norm=None):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
+    "def linear_reg(X, y, norm=None, normFunc='l1'):\n",
+    "    if norm:\n",
+    "        X = norm(X, normFunc)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)    \n",
     "    linear = LinearRegression()\n",
     "    linear.fit(X_train, y_train)\n",
     "    y_train_pred = linear.predict(X_train)\n",
@@ -2270,17 +2281,29 @@
     "print(\"Income Per Capita Linear Regression Model\")\n",
     "linear_reg(X, income_per_cap)\n",
     "\n",
+    "X = df.drop(['IncomePerCap', 'CensusId', 'State', 'County'], axis=1)\n",
+    "print(\"Income Per Capita Linear Regression Model (l1 Normalized)\")\n",
+    "linear_reg(X, income_per_cap, norm=normalize)\n",
+    "\n",
     "print()\n",
     "\n",
     "X = df.drop(['Unemployment', 'CensusId', 'State', 'County'], axis=1)\n",
     "print(\"Unemployment Linear Regression Model\")\n",
     "linear_reg(X, unemployment)\n",
     "\n",
+    "X = df.drop(['Unemployment', 'CensusId', 'State', 'County'], axis=1)\n",
+    "print(\"Unemployment Linear Regression Model (l1 Normalized)\")\n",
+    "linear_reg(X, unemployment, norm=normalize)\n",
+    "\n",
     "print()\n",
     "\n",
     "X = df.drop(['Poverty', 'CensusId', 'State', 'County'], axis=1)\n",
-    "print(\"Poverty Regression Model\")\n",
-    "linear_reg(X, poverty)"
+    "print(\"Poverty Linear Regression Model\")\n",
+    "linear_reg(X, poverty)\n",
+    "\n",
+    "X = df.drop(['Poverty', 'CensusId', 'State', 'County'], axis=1)\n",
+    "print(\"Poverty Linear Regression Model (l1 Normalized)\")\n",
+    "linear_reg(X, poverty, norm=normalize)"
    ]
   },
   {
